Search Icon Alignment Issue

--- a/eplayer/src/routes/ETBook/components/Book.scss
+++ b/eplayer/src/routes/ETBook/components/Book.scss
@@ -53,7 +53,10 @@ $cont-padding-bottom: 85px;
       }
     }
   }
-.searchContainer {
+.headerBar .searchContainer {
+  position: initial !important; 
+  right: initial !important; 
+  top: initial !important; 
   .triangle-up {
     border-bottom: 20px solid #f2f2f2 !important;
     &.fixHeader {
